--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
-  
+  <!-- Device ID testing -->
+  <script async defer src=\"https://us.dev.zeronaught.com/__imp_apg__/js/volterra-a_aau075f5AT1-a4ac1c33.js\" id=\"_imp_apg_dip_\" _imp_apg_cid_=\"volterra-a_aau075f5AT1-a4ac1c33\" _imp_apg_api_domain_=\"https://us.dev.zeronaught.com\"></script>
 </head>
 <body>
   <h3>welcome to the codebase!</h3>
